--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
+  
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  
 
         The HTML content goes here.
     </body>
